# RoboticsEngineeringUNIGE

./: .gitignore
ComputerVision/CV_fourth_assignment/: LucasKanade.m  compareCDAlgo.m  compareCDOF.m  main.m  segmentAndTrack.m
ComputerVision/CV_second_assignment/: Harris_function.m  NCC_function.m  debugging.rtf  find_car.m  main.m
ComputerVision/CV_third_assignment/: EightPointsAlgorithm.asv  EightPointsAlgorithm.m  EightPointsAlgorithmN.m  check_epipolar_constraint.m  check_epipole.m  epipoles.m  imageMatching.m  main.m  ransacF.asv  ransacF.m  visualizeEpipolarLines.m
ComputerVision/ImageMatching/: Labo_matching.m  findMatches.m  similarity.m
ComputerVision/Lab1/: lab1_live.mlx  prova.m  rotatation_img.m  scaling_img.m  traslation_img.m
ComputerVision/Lab3/: laplacian_of_gaussian.m  main.m
ComputerVision/Lab4/: blob_detec.m  color_based_segmentation.m
ComputerVision/Lab6/: main.m  ransacF.m
ComputerVision/Lecture1_M-files/: conv_fft.m  demosaicing.m  history.txt  image_exemple.m  quantizer.m  sampler.m  zooming.m
ComputerVision/Lecture2_M_files/: ex_fft.m  histo.m  noise.m  noise_filtering.m  panda.m  phase.m  subsampling.m
ComputerVision/Lecture3_M_files/: Lab3_testimages.textClipping
ComputerVision/Lecture4_pyramid_color/: blobs_detection.m  deg2rad.m  der_gaussian.m  down_up_sampling.m  ex_color_seg_prop.m  (+1 more)
OptimalControl/: README.md
ResearchTrack1/custom_interface/: CMakeLists.txt  README.md  package.xml
ResearchTrack1/custom_interface/msg/: InfoRobot.msg
ResearchTrack1/custom_interface/srv/: AverageVel.srv  TreshExam.srv  Treshold.srv
(+470 files in other folders)
