cmake_minimum_required(VERSION 3.8)
project(custom_interface)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(rosidl_default_runtime REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/InfoRobot.msg"
  "srv/AverageVel.srv"
  "srv/Treshold.srv"
  "srv/TreshExam.srv"
  "action/Target.action"
  DEPENDENCIES
)
ament_export_dependencies(rosidl_default_runtime)



ament_package()
